perbaiki kode_produk agar digenerate otomatis
